
171110 Martin Mann :
 * CommandLineParsing :
   + qSet : parameter to define sequence subset to be considered for prediction
   + tSet : parameter to define sequence subset to be considered for prediction

171019 Martin Mann :
 * configure.ac :
   + in debug mode, set ELPP_DEBUG_ERRORS compiler define
 * IntaRNA/general.h :
   - ELPP_* defines removed since set via configure or not needed
 * bin/CommandLineParsing :
   + argument "--default-log-file" to redirect log output to file (except ERROR)
   + logFileName : dummy variable for --default-log-file argument
 * bin/IntaRNA :
   + log-file handling
   + flushing log streams on exit

version 2.1.0

171010 Martin Mann :
 * README.md :
   + explicit seed description
 * AccessibilityVrna :
   * fillByConstraints() :
   * fillByRNAup() :
   * callbackForStorage() :
     * BUGFIX : only check for block-constraint for region ends (is allowed to
       contain a blocked subregion)

171009 Martin Mann :
 * tests/*BasePair_test :
   * explicit use of std::abs (should fix test error of github issue #91)
   * BUGFIX: test values wrong (were derived from rounded values)
     -> fixes github issue #91 (thanks to @sjannielefevre) 
 * AccessibilityBasePair :
   * constructor() :
     + RT sanity check to avoid division by zero
 * NussinovHandler :
   + printMatrix() : utility function for debug to see matrix content
   * getQ(), getQb(), getPbp(), getPu() :
     * BUGFIX : boundary checks partially wrong
     + explicit lower bound handling
 + SeedHandlerMfe : former SeedHandler implementation for mfe-seed access
 * SeedHandler : now abstract interface
 * Predictor*Seed :
   * constructor() :
     * takes now directly a SeedHandler instance instead of a SeedConstraint
 * CommandLineParsing :
   + getSeedHandler() : provides the seed handler according to the user input
   * getPredictor() :
     * uses now getSeedHandler() to setup Predictor*Seed instances
   + '--seedTQ' argument for explicit seed encodings
 * SeedHandlerMfe() :